<resources>
    <string name="app_name">Hello CMP</string>
    <string name="action_search">Edit Reports</string>
    <string name="action_report">All Reports</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="user1">চট্টগ্রাম মেট্রোপলিটন পুলিশের এর মোবাইল এপ্লিকেশন “হ্যালো সিএমপি” এ আপনাকে স্বাগতম। এপ্লিকেশনটির বিস্তারিত ব্যবহার নির্দেশিকার জন্য স্ক্রল করুন।</string>
    <string name="user2">মোবাইল এপ্লিকেশনটির হোম পেইজে আপনি ৬(ছয়) টি মূল বাটন দেখতে পাচ্ছেন, যেগুলো হলোঃ জঙ্গীবাদ/উগ্রবাদ, মাদক, বোমা/বিষ্ফোরক/অস্ত্র/মাদক, আন্তঃদেশীয় অপরাধ/ সাইবার ক্রাইম, ওয়ান্টেড এবং তথ্য কণিকা</string>
    <string name="user3Title">জঙ্গীবাদ/উগ্রবাদঃ</string>
    <string name="user3">আপনার আশেপাশে ঘটে যাওয়া কিংবা আপনার স্মরণে থাকা কিংবা আপনার পরিচিত যে কারো থেকে জানতে পাওয়া জঙ্গীবাদ/উগ্রবাদ সংক্রান্ত যেকোন তথ্য আপনি এখানে দিতে পারেন। উদাহরণস্বরূপ আপনি লেখতে পারেনঃ “মনে হচ্ছে আমাদের বাড়িতে কিছু জঙ্গী থাকে/Mone hose amader bari te kisu jongi thake/ It seems like a few terrorists lives in our house.”</string>
    <string name="user4Title">মাদকঃ</string>
    <string name="user4">আপনার আশেপাশে যেকোন মাদক সংক্রান্ত তথ্য এই মেনুর মাধ্য়মে আমাদেরকে পাঠাতে পারেন।</string>
    <string name="user5Title">বোমা/বিষ্ফোরক/অস্ত্র/ঃ</string>
    <string name="user5">আপনার আশেপাশে ঘটে যাওয়া কিংবা সন্দেহভাজন যেকোন প্রকার দেশী/বিদেশী অস্ত্র, মাদক, বোমা এবং বিষ্ফোরক সংক্রান্ত তথ্য আপনি আমাদের দিতে পারেন। উদাহরণস্বরূপ আপনি বলতে পারেনঃ “আমাদের সামনের বাসায় বোম্ব তৈরী করা হয়...”।</string>
    <string name="user6Title">আন্তঃদেশীয় অপরাধ/সাইবার ক্রাইম</string>
    <string name="user6">আপনার কিংবা আপনার কোন আত্মীয়/বন্ধু-বান্ধব কিংবা পরিচিত যে কারো ক্রেডিট/ডেবিট কার্ড জালিয়াতি,সামাজিক য‌োগায‌োগ সাইটে (যেমন: ফেইসবুক) অপরাধ, অনলাইন ব্যংকিং জালিয়াতি, স বিকাশ/ইউক্যশ/ইত্যাদি জালিয়াতির যেকোন সংবাদ কিংবা আপনার অনুমানকৃত কিংবা জানা শোনা কেউ যদি মানব পাচার, অর্থ পাচার, জঙ্গী অর্থায়ন ইত্যাদি অপরাধের সাথে জড়িত থাকে তবে সেসকল তথ্যও আপনি আমাদের দিতে পারেন। উদাহরণস্বরূপ আপনি বলতে পারেনঃ “আমার ক্রেডিট কার্ড নম্বর ০০০০-০০০০-০০০০-০০০০, এটি আমার কাছেই আছে কিন্তু অনবরত এতে ট্র্যঞ্জেকশন হচ্ছে আর আমার কাছে এসএমএস আসছে...।”</string>
    <string name="user7Title">মোস্ট ওয়ান্টেডঃ</string>
    <string name="user7">আপনি বা আপনার পরিচিতি কেউ যদি এমন কোন ব্যক্তি বা গোষ্ঠীর সন্ধান জেনে থাকেন যাদের পুলিশ কিংবা আইন প্রণয়নকারী সংস্থা দীর্ঘদিন ধরে খুজছে,তবে সেটিও আপনি আমাদেরকে জানাতে পারেন। উদাহরণস্বরূপ আপনি বলতে পারেনঃ “আজকে আনুমানিক দুপুর ৩ টায় ইস্টার্ণ মল্লিকা মার্কেটে শীর্ষ সন্ত্রাসী ক-খ-গ কে দেখেছি...।”</string>
    <string name="user8Title">তথ্য কণিকা</string>
    <string name="user8">এই অংশে আপনারা চট্টগ্রাম মেট্রোপলিটন পুলিশের বিভিন্ন দিক এবং ভবিষ্যৎ পরিকল্পনা সম্পর্কে জানতে পারবেন। জানতে পারবেন এই এপ্লিকেশনটি তৈরীর মূল উদ্দেশ্য, কারা এটি তৈরী করেছে ইত্যাদি নানাবিধ গুরুত্বপূর্ণ তথ্য।</string>
    <string name="user9Title">কিভাবে এপ্লিকেশনটি ব্যবহার করবেনঃ</string>
    <string name="user9">এপ্লিকেশনটির হোম পেইজে থাকা ৫(পাঁচ) টি বাটনে ক্লিক করে আপনি বিভিন্ন প্রকার গুরুত্বপূর্ণ তথ্য আমাদের দিতে পারছেন। এই ৫(পাচ) টি বাটনের সবকটিতে ক্লিক করলেই আপনি দুইটি ভিন্ন ট্যবে দুইটি ভিন্ন ফরম পাবেন যেগুলো হলোঃ “নতুন তথ্য” এবং “তথ্য সংযোজন”।</string>
    <string name="user10Title">নতুন তথ্য</string>
    <string name="user10">নতুন তথ্য ফরমে আপনি শুরুতেই পাবেন “অপরাধের তথ্য” নামক একটি টেক্সট বক্স। এটি পূরণ করা বাধ্যতামূলক। আপনার কাছে থাকা ছোট/বড় নানাবিধ গুরুত্বপূর্ণ তথ্য আপনি এই বক্সে লিখতে পারবেন। আপনার তথ্য যত বড় কিংবা যত ছোটই হোক না কেন সেটি আমাদের কাছে অত্যন্ত গুরুত্ববহ।
এর পরেই আপনি পাবেন “অপরাধের ঘটনাস্থল” নামক একটি ড্রপ-ডাউন মেনুবার।</string>
    <string name="user11Title">অপরাধের ঘটনাস্থল</string>
    <string name="user11">এখানে আপনি ৩(তিন) টি অপশন পাবেনঃ মহানগর এলাকা/ জেলা/ বাংলাদেশের বাইরে। এই ৩(তিন) টির মধ্য থেকে আপনাকে আপনার কাঙ্ক্ষিত ঘটনাস্থলটি নির্বাচন করতে হবে। আপনার দেয়া তথ্যটি যদি কোন মেট্রোপলিটন এলাকায় হয়ে থাকে তবে আপনি নির্বাচন করবেন “মহানগর এলাকা”। আবার, আপনার দেয়া তথ্যটি যদি হয়ে থাকে বাংলাদেশের কোন একট জেলার, তবে আপনি “জেলা” নির্বাচন করবেন। অপরদিকে, আপনার তথ্যটি যদি দেশের বাইরের কোন স্থানে ঘটে যাওয়া তথ্য হয়ে থাকে তবে “বাংলাদেশের বাইরে” নির্বাচন করতে হবে। আপনি যদি অপরাধের ঘটনাস্থলে “মহানগর এলাকা” নির্বাচন করে থাকেন, তবে ঠি তার নিচেই আপনি “মহানগরের নাম” লেখা অপর একটি ড্রপ-ডাউন মেনুবার পাবেন যেখান থেকে আপনি আপনার কাঙ্ক্ষিত মহানগরের নাম নির্বাচন করতে পারবেন। অতঃপর তার নিচে অবস্থিত অপর একটি ড্রপ-ডাউন মেনুবার থেকে সংশ্লিষ্ট মহানগরের যেই থানার অধিনে ঘটনাটি ঘটেছে যেই থানার নামটি আপনাকে নির্বাচন করতে হবে। অনুরূপভাবে, মহানগরের স্থানে যদি আপনার তথ্যটি কোন জেলার অভ্যন্তরে হয়ে থাকে তবে আপনি অপরাধের ঘটনাস্থলে”জেলা” নির্বাচন করবেন এবং তার নিচে “জেলার নাম” নামক ড্রপ-ডাউন মেনুবার থেকে আপনার তথ্য সংক্রান্ত জেলার নাম নির্বাচন করবেন এবং সবশেষে “থানার নাম” নামক ড্রপ-ডাউন মেনুবার থেকে সংশ্লিষ্ট থানার নামটি নির্বাচন করতে হবে। আর, আপনার দেয়া তথ্যটি যদি হ্য দেশের বাইরের, তবে “অপরাধের ঘটনাস্থল” এ “বাংলাদেশের বাইরে” নির্বাচন করতে হবে এবং এর নিচেই তখন একটি টেক্সট বক্স আসবে যেখানে সেই দেশের নামটি টাইপ করতে হবে আপনাকে।
অপরাধের ঘটনাস্থল এর পরেই আরেকটি অংশ পাওয়া যাবে যেটি হলো “তথ্য দাতার পরিচয়”।</string>
    <string name="user12Title">তথ্য দাতার পরিচয়</string>
    <string name="user12">তথ্য দাতার পরিচয় নিঃসন্দেহে গোপণ রাখা হবে এবং এটি পূরণ করা অবধারিত নয়। এটি তথ্য দাতার সম্পূর্ণ ঐচ্ছিক একটি বিষয়। তবে কেউ যদি তার তথ্য দিতে চায় তবে এই অংশে থাকা ২(দুই) টি টেক্সট বক্স যথাক্রমে ফোন নম্বর এবং ঠিকানা পূরণ করতে হবে।</string>
    <string name="user13">সবশেষে পাওয়া যাবে “দত্ত তথ্য সংক্রান্ত কোন ছবি, ভিডিও বা অডিও থাকলে সংযুক্ত করুন(যদি থাকে)” নামক অংশ।
প্রদত্ত তথ্য সংক্রান্ত কোন ছবি, ভিডিও বা অডিও থাকলে সংযুক্ত করুন(যদি থাকে)
আপনি যে তথ্য প্রদান করছেন যেই তথ্য সংক্রান্ত যদি কোন অডিও/ভিডিও বা ছবি আপনার কাছে থেকে থাকে তবে সেটি আপনি এই অংশে সংযুক্ত করতে পারেন। তবে, সংযুক্ত করার মত কিছু না থাকলেও কোন সমস্যা হবে না।
অতঃপর আপনার পূরণকৃত গুরুত্বপূর্ণ তথ্যটি আমাদের নিকট পৌছানোর জন্য “SUBMIT” বাটনে ক্লিক করতে পারেন।</string>
    <string name="user14">“SUBMIT” বাটনে ক্লিক করার সাথে সাথে আপনি একটি বার্তা পাবেন “আপনার তথ্যটি সঠিকভাবে জমা হয়েছে। প্রস্তাবিত তথ্যের আইডি নম্বর ০০০০০০। পরবর্তীতে তথ্যটি সংশোধন কিংবা পুনরায় সংযোজন করতে আইডি টি সংরক্ষণ করুন।”
এই বার্তা থেকে প্রাপ্ত “তথ্য আইডি” টি আপনি সংরক্ষণ করে রাখতে পারেন। তাহলে ভবিষ্যতে এই তথ্য সংক্রান্ত কোন নতুন খবর আমাদের নিকট পৌছাতে হলে আপনার কাজ অনেকটাই সহজ হয়ে যাবে।</string>
    <string name="user15">“নতুন তথ্য” নামক ট্যাব এর কার্যপ্রণালী এখানেই শেষ। এবার যদি আপনি আপনার প্রদানকৃত কোন তথ্য সংযোজন কিংবা সংশোধন করতে চান তবে আপনাকে যেতে হবে “তথ্য সংযোজন” নামক ট্যাব এ।</string>
    <string name="user16Title">তথ্য সংযোজন </string>
    <string name="user16">এই ট্যাব এর শুরুতেই আপনি দেখতে পাবেন “তথ্য আইডি নম্বর” নামক একটি সার্চ বক্স। এখানে আপনার পূর্বে প্রদানকৃত তথ্য যেটি আপনি সংযোজন কিংবা সংশোধন করতে চান সেটির আইডি নম্বর লিখতে হবে। এরপর সার্চ বাটনে ক্লিক করলে আপনি আপনার পূরণকৃত ফরমটি পেয়ে যাবেন এবং সেখানে আপনার সেই সেই তথ্য সংযোজন কিংবা সংশোধন করতে চান, সেগুলো করে নিয়ে আবার “SUBMIT” বাটনে ক্লিক করলে আপনার পূর্বের তথ্যের সাথে বর্তমানে প্রদত্ত তথ্যটি সংযোজিত কিংবা সংশোধিত হয়ে যাবে। তথ্য সংযোজন করার পর আপনি একট বার্তা পাবেন ““আপনার তথ্যটি সঠিকভাবে জমা হয়েছে। প্রস্তাবিত তথ্যের আইডি নম্বর ০০০০০০। পরবর্তীতে তথ্যটি সংশোধন কিংবা পুনরায় সংযোজন করতে আইডি টি সংরক্ষণ করুন।” মনে রাখবেন, তথ্য আইডি তে কোন তথ্য সংযোজন বা সংশোধন করার পর সেটি তথ্য আইডি নম্বর পরিবর্তন হবে না। তথ্য আইডি নম্বর একই থাকবে, শুধুমাত্র তথ্যটি পরিবর্তিত হয়ে যাবে। আপনি চাইলে একই তথ্য আইডি একাধিকবার সংযোজন কিংবা সংশোধন করতে পারেন।</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="metro_prompt">মহানগরের নাম</string>
    <string name="thana_prompt">থানার নাম</string>
    <string name="district_prompt">জেলার নাম</string>
    <string name="country_prompt">বিভাগসমূহ</string>
    <string-array name="country_arrays">
        <item>চট্টগ্রাম</item>
        <item>রাজশাহী</item>
        <item>খুলনা</item>
        <item>বরিশাল</item>
        <item>সিলেট</item>
        <item>ঢাকা</item>
        <item>রংপুর</item>
        <item>ময়মনসিংহ</item>
    </string-array>

    <string-array name="mainCity">
        <item>Cappuccino</item>
        <item>Espresso</item>
        <item>Mocha</item>
        <item>Caffè Americano</item>
        <item>Cafe Zorro</item>
    </string-array>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_most_wanted">MostWanted</string>
    <string name="title_activity_wanted">Wanted</string>
</resources>
